--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -70,7 +70,8 @@
       <p>
       The objects of the Charity state that the area covered is defined by the parishes of Lingfield, Dormansland and Baldwins Hill. Reference will be made to these historic boundaries as defined by the Church Commissioners, when assessing suitability.
       </p>
-      <p>A map of the area covered can be found <a href="images/map.jpg" target="_blank">here</a>.</p>
+      <h5>Map of the area</h5>
+      <a href="images/map-big.jpg" target="_blank"><img src="images/map-small.jpg"/></a>
     <div>
 
   </div>
