--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -65,7 +65,7 @@
       An application form can be downloaded <a href="docs/LUT-application-form.pdf" target="_blank">here</a>.
       <p/>
       <p>
-      Contact should be made in the first place to our <a href="mailto:lingfieldunitedtrust@gmail.com">Clerk to the Trustees</a>.
+      Contact should be made in the first place to our <a href="contact.html">Clerk to the Trustees</a>.
       <p/>
       <p>
       The objects of the Charity state that the area covered is defined by the parishes of Lingfield, Dormansland and Baldwins Hill. Reference will be made to these historic boundaries as defined by the Church Commissioners, when assessing suitability.
