open grant app in new window

--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -57,7 +57,7 @@
       <p>
       The majority of the grants that we provide are issued just prior to Christmas, to residents of the parishes aged 60 or over, and who meet our criteria. To apply, residents are required to fill in an application form which is available in late November each year, from participating retailers or from our Clerk.
       </p>
-      <p><a href="docs/LUT-2016-Christmas-application-form.pdf">Download the 2016 Christmas Distribution Application Form</a></p>
+      <p><a href="docs/LUT-2016-Christmas-application-form.pdf" target="_blank">Download the 2016 Christmas Distribution Application Form</a></p>
       <p>
       This financial gift is given in the form of vouchers which are redeemable at local retailers who participate in the scheme. Provision of this money is generated from investment or donations from various benefactors, most generously the <a href="http://www.henrysmithcharity.org.uk" target="_blank">Henry Smith Charity</a>
       </p>
