--- a/public_html/links.html
+++ b/public_html/links.html
@@ -67,6 +67,7 @@
       <h5>Advice</h5>
       <ul>
         <li><a href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/" target="_blank">Citizens Advice</a></li>
+        <li><a href="http://householdquotes.co.uk/uk-benefits-guide/" target="_blank">UK Benefits Guide</a></li>
       </ul>
 
       <h5>Local Churches</h5>
@@ -115,7 +116,6 @@
       <h5>Local Charities</h5>
       <ul>
         <li><a href="http://grants-search.turn2us.org.uk/grant/crowhurst-relief-in-need-charities-12626" target="_blank">Crowhurst Relief-in-Need Charity</a></li>
-        <li><a href="http://welcare.org/our-services/localsupport/redhill-centre/" target="_blank">Welcare - family support</a></li>
       </ul>
 
       <h5>Local Community</h5>
