--- a/public_html/links.html
+++ b/public_html/links.html
@@ -67,7 +67,8 @@
       <h5>Advice</h5>
       <ul>
         <li><a href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/" target="_blank">Citizens Advice</a></li>
-        <li><a href="http://householdquotes.co.uk/uk-benefits-guide/" target="_blank">UK Benefits Guide</a></li>
+        <li><a href="http://householdquotes.co.uk/uk-benefits-guide/" target="_blank">Household benefits guide</a></li>
+        <li><a href="http://benefitsguide.co.uk/" target="_blank">Guide to UK welfare benefits</a></li>
       </ul>
 
       <h5>Local Churches</h5>
