Added policies section

--- a/public_html/almshouses.html
+++ b/public_html/almshouses.html
@@ -43,6 +43,7 @@
               <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="almshouses.html"><strong>Almshouses</strong></a></li>
               <li class="navbar-item"><a class="navbar-link" href="grants.html">Grants</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="policies.html">Policies</a></li>
               <li class="navbar-item"><a class="navbar-link" href="links.html">Links</a></li>
               <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact</a></li>
             </ul>
@@ -126,7 +127,7 @@ Government sponsored post.
 
 <div style="margin-left: 140px">
       <img src="images/hochee.jpg" style="height:200px"/>
-      <img src="images/hochee-chinese.png" style="margin-left:50px"/>        
+      <img src="images/hochee-chinese.png" style="margin-left:50px"/>
 </div>
 <p>
 
