--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -43,6 +43,7 @@
               <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="almshouses.html">Almshouses</a></li>
               <li class="navbar-item"><a class="navbar-link" href="grants.html"><strong>Grants</strong></a></li>
+              <li class="navbar-item"><a class="navbar-link" href="policies.html">Policies</a></li>
               <li class="navbar-item"><a class="navbar-link" href="links.html">Links</a></li>
               <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact</a></li>
             </ul>
@@ -55,14 +56,17 @@
     <div class="row content">
       <h3>Grants</h3>
       <p>
-      The majority of the grants that we provide are issued just prior to Christmas, to residents of the parishes aged 60 or over, and who meet our criteria. To apply, residents are required to fill in an application form which is available in late November each year, from participating retailers or from our Clerk.
+      The majority of the grants that we provide are issued just prior to Christmas, to residents of the parishes aged 60 or over, and who meet our criteria. To apply, residents are required to fill in an application form which is available in October/November each year, from local community premises or from our Clerk.
       </p>
       <p>
       This financial gift is given as a cheque. Provision of this money is generated from investment or donations from various benefactors, most generously the <a href="http://www.henrysmithcharity.org.uk" target="_blank">Henry Smith Charity</a>
       </p>
       <p>
+      The Christmas Distribution application form can be downloaded <a href="docs/Christmas application form 2018.pdf" target="_blank">here</a>.
+      </p>
+      <p>
       Lingfield United Trust will consider the award of modest grants throughout the year to any appropriate applicant who contacts us directly or is referred to us through Social Services or local health and welfare professionals.
-      An application form can be downloaded <a href="docs/LUT-application-form.pdf" target="_blank">here</a>.
+      A 'Case for Assistance' application form can be downloaded <a href="docs/case for assistance application form 2018.pdf" target="_blank">here</a>.
       <p/>
       <p>
       Contact should be made in the first place to our <a href="contact.html">Clerk to the Trustees</a>.
