--- a/public_html/links.html
+++ b/public_html/links.html
@@ -43,6 +43,7 @@
               <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="almshouses.html">Almshouses</a></li>
               <li class="navbar-item"><a class="navbar-link" href="grants.html">Grants</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="policies.html">Policies</a></li>
               <li class="navbar-item"><a class="navbar-link" href="links.html"><strong>Links</strong></a></li>
               <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact</a></li>
             </ul>
