--- a/public_html/policies.html
+++ b/public_html/policies.html
@@ -23,7 +23,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
-	<title>Lingfield United Trust</title>
+  <title>Lingfield United Trust</title>
 </head>
 
 <body>
@@ -33,9 +33,9 @@
 
     <div class="row">
       <div class="twelve columns" style="margin-top: 5%">
-        <img src="images/logo.png" id="logo" style="height:100px"/> 
-        <h2>Lingfield United Trust</h2>
-        
+        <img src="images/logo.png" id="logo" style="height:100px"/>
+        <h1>Lingfield United Trust</h1>
+
         <nav class="navbar">
           <div class="container">
             <ul class="navbar-list">
@@ -43,7 +43,8 @@
               <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="almshouses.html">Almshouses</a></li>
               <li class="navbar-item"><a class="navbar-link" href="grants.html">Grants</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="reports.html"><strong>Annual Reports</strong></a></li>
+              <li class="navbar-item"><a class="navbar-link" href="policies.html"><strong>Policies</strong></a></li>
+              <li class="navbar-item"><a class="navbar-link" href="links.html">Links</a></li>
               <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact</a></li>
             </ul>
           </div>
@@ -52,9 +53,26 @@
     </div>
 
     <div class="row content">
-        <h4>Annual Reports</h4>
-    </div>
+      <h3>Policies</h3>
+      <p>
+        Lingfield United Charities has adopted and published the following Policies
+        in order to comply with the Law (The GDPR and DPA 2018) in respect of
+        the data that it holds about individuals and to adhere to the requirements
+        of the Charity Commission and the Almshouse Association.
+      </p>
 
+      <p>Copies of the Policies are available from the Clerk or can be downloaded below.</p>
+
+      <h5>Documents</h5>
+      <ul>
+      <li><a href="docs/Data-ProtectionPolicy LUT 2018.pdf" target="_blank">Data Protection Policy</a></li>
+      <li><a href="docs/Equality-and-Diversity policy 2018.pdf" target="_blank">Equality and Diversity Policy</a></li>
+      <li><a href="docs/Safeguarding Policy 2018.pdf" target="_blank">Safeguarding Policy</a></li>
+      <li><a href="docs/Improving peoples lives policy 2018.pdf" target="_blank">Improving Peoples’ Lives Policy</a></li>
+      <li><a href="docs/Complaints Procedure 2018.pdf" target="_blank">Complaints Procedure</a></li>
+      </ul>
+
+    <div>
   </div>
 
 </body>
