--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -33,9 +33,9 @@
 
     <div class="row">
       <div class="twelve columns" style="margin-top: 5%">
-        <img src="images/logo.png" id="logo" style="height:100px"/> 
+        <img src="images/logo.png" id="logo" style="height:100px"/>
         <h1>Lingfield United Trust</h1>
-        
+
         <nav class="navbar">
           <div class="container">
             <ul class="navbar-list">
@@ -43,6 +43,7 @@
               <li class="navbar-item"><a class="navbar-link" href="about.html">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="almshouses.html">Almshouses</a></li>
               <li class="navbar-item"><a class="navbar-link" href="grants.html">Grants</a></li>
+              <li class="navbar-item"><a class="navbar-link" href="policies.html">Policies</a></li>
               <li class="navbar-item"><a class="navbar-link" href="links.html">Links</a></li>
               <li class="navbar-item"><a class="navbar-link" href="contact.html"><strong>Contact</strong></a></li>
             </ul>
@@ -54,7 +55,7 @@
     <div class="row content">
       <h3>Contact</h3>
       <p>
-        The Chairman of the Lingfield United Trust charity is Mrs Marion Wardell and there are 9 additional Trustees.
+        The Chairman of the Lingfield United Trust charity is Mrs Marion Wardell and there are 6 additional Trustees.
       </p>
       <p>
         The Clerk to the Trustees is Mrs M Hughes.
