Updated public html

--- a/public_html/policies.html
+++ b/public_html/policies.html
@@ -65,10 +65,10 @@
 
       <h5>Documents</h5>
       <ul>
-      <li><a href="docs/Data-ProtectionPolicy LUT 2018.pdf" target="_blank">Data Protection Policy</a></li>
-      <li><a href="docs/Equality-and-Diversity policy 2018.pdf" target="_blank">Equality and Diversity Policy</a></li>
-      <li><a href="docs/Safeguarding Policy 2018.pdf" target="_blank">Safeguarding Policy</a></li>
-      <li><a href="docs/Complaints Procedure 2018.pdf" target="_blank">Complaints Procedure</a></li>
+      <li><a href="docs/Data-ProtectionPolicy_LUT.pdf" target="_blank">Data Protection Policy</a></li>
+      <li><a href="docs/Equality-and-Diversity_policy.pdf" target="_blank">Equality and Diversity Policy</a></li>
+      <li><a href="docs/Safeguarding_Policy.pdf" target="_blank">Safeguarding_Policy</a></li>
+      <li><a href="docs/Complaints_Procedure.pdf" target="_blank">Complaints_Procedure</a></li>
       </ul>
 
     <div>
