--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -62,11 +62,11 @@
       This financial gift is given as a cheque. Provision of this money is generated from investment or donations from various benefactors, most generously the <a href="http://www.henrysmithcharity.org.uk" target="_blank">Henry Smith Charity</a>
       </p>
       <p>
-      The Christmas Distribution application form can be downloaded <a href="docs/Christmas application form 2018.pdf" target="_blank">here</a>.
+      The Christmas Distribution application form can be downloaded <a href="docs/Christmas_application_form.pdf" target="_blank">here</a>.
       </p>
       <p>
       Lingfield United Trust will consider the award of modest grants throughout the year to any appropriate applicant who contacts us directly or is referred to us through Social Services or local health and welfare professionals.
-      A 'Case for Assistance' application form can be downloaded <a href="docs/case for assistance application form 2018.pdf" target="_blank">here</a>.
+      A 'Case for Assistance' application form can be downloaded <a href="docs/case_for_assistance_application_form.pdf" target="_blank">here</a>.
       <p/>
       <p>
       Contact should be made in the first place to our <a href="contact.html">Clerk to the Trustees</a>.
