--- a/public_html/policies.html
+++ b/public_html/policies.html
@@ -56,8 +56,8 @@
       <h3>Policies</h3>
       <p>
         Lingfield United Charities has adopted and published the following Policies
-        in order to comply with the Law (The GDPR and DPA 2018) in respect of
-        the data that it holds about individuals and to adhere to the requirements
+        in order to comply with the Law (The GDPR and DPA 2018) in respect of the data
+        that it holds about individuals and to adhere to the requirements
         of the Charity Commission and the Almshouse Association.
       </p>
 
@@ -65,10 +65,10 @@
 
       <h5>Documents</h5>
       <ul>
-      <li><a href="docs/Data-ProtectionPolicy_LUT.pdf" target="_blank">Data Protection Policy</a></li>
-      <li><a href="docs/Equality-and-Diversity_policy.pdf" target="_blank">Equality and Diversity Policy</a></li>
-      <li><a href="docs/Safeguarding_Policy.pdf" target="_blank">Safeguarding_Policy</a></li>
-      <li><a href="docs/Complaints_Procedure.pdf" target="_blank">Complaints_Procedure</a></li>
+      <li><a href="docs/policies/data-protection.pdf" target="_blank">Data Protection Policy</a></li>
+      <li><a href="docs/policies/equality-and-diversity.pdf" target="_blank">Equality and Diversity Policy</a></li>
+      <li><a href="docs/policies/safeguarding.pdf" target="_blank">Safeguarding Policy</a></li>
+      <li><a href="docs/policies/complaints.pdf" target="_blank">Complaints Procedure</a></li>
       </ul>
 
     <div>
