deleting old resources

--- a/public_html/grants.html
+++ b/public_html/grants.html
@@ -62,7 +62,7 @@
       This financial gift is given as a cheque. Provision of this money is generated from investment or donations from various benefactors, most generously the <a href="http://www.henrysmithcharity.org.uk" target="_blank">Henry Smith Charity</a>
       </p>
       <p>
-      The Christmas Distribution application form can be downloaded <a href="docs/Christmas_application_form.pdf" target="_blank">here</a>.
+      When available, the Christmas Distribution application form can be downloaded from here.
       </p>
       <p>
       Lingfield United Trust will consider the award of modest grants throughout the year to any appropriate applicant who contacts us directly or is referred to us through Social Services or local health and welfare professionals.
